# ReMarkableReaderBuddy

./: .gitignore  Cargo.toml  README.md  build.sh  env.example
.cursor/plans/: reader-13e9ef-1622edd9.plan.md  reader-e4827749.plan.md
.github/workflows/: ci.yml  release.yml
.versioning/: source_globs.txt
docs/: TECHNICAL.md  WORKFLOW_DIAGRAM.md
src/: lib.rs  main.rs  util.rs
src/analysis/: circle_detector.rs  mod.rs  question_extractor.rs
src/device/: keyboard.rs  mod.rs  pen.rs  screenshot.rs  touch.rs
src/llm/: mod.rs  openai.rs
src/workflow/: mod.rs  orchestrator.rs  page_manager.rs  renderer.rs  symbol_pool.rs  xochitl_integration.rs
