[package]
name = "remarkable-reader-buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
ureq = { version = "3.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
image = "0.25.5"
byteorder = "1.4"
clap = { version = "4.0", features = ["derive", "env"] }
resvg = "0.45"
dotenv = "0.15"
imageproc = "0.25.0"
env_logger = "0.11.6"
log = "0.4.22"
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"

[lib]
name = "remarkable_reader_buddy"
path = "src/lib.rs"

[[bin]]
name = "reader-buddy"
path = "src/main.rs"

